--- a/visuals/style/style.css
+++ b/visuals/style/style.css
@@ -1,3 +1,8 @@
+html, html a {
+    -webkit-font-smoothing: antialiased !important;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+}
+
 @font-face {
 font-family: minecraft;
 src: url('minecraftia.ttf');
@@ -13,7 +18,7 @@ font-family: minecraft, Helvetica, Arial;
 -khtml-user-select: none;
 -webkit-user-select: none;
 user-select: none;
--webkit-text-stroke: 0.Xpx;
+-webkit-text-stroke: 0Xpx;
 }
 
 #mine {
@@ -34,6 +39,7 @@ z-index: -1;
 #leftSideBar {
 top: 0px;
 left: 0px;
+height: 300px;
 }
 
 #rightSideBar {
@@ -42,7 +48,7 @@ right: 0px;
 }
 
 #leftSideBarTwo {
-top: 600px;
+top: 590px;
 left: 0px;
 }
 
@@ -65,16 +71,22 @@ text-shadow: 4px 4px 0px #3F3F3F;
 
 #store {
 position: absolute;
-top: 290px;
+top: 300px;
+border: 2px solid #3B3B3B;
+height: 290px;
+width: 220px;
 }
 
 #store div {
 display: block;
-font-size: 23px; 
-font-family: Helvetica, Arial; 
+font-size: 18px; 
+font-family: minecraft, Helvetica, Arial; 
 color: #00AA00; 
-text-shadow: 5px 5px 5px black; 
+text-shadow: 2px 2px 0px black;
 width: 220px;
+background-color: #333333;
+opacity: 0.8;
+border-bottom: 2px solid black;
 }
 
 #storeBought {
@@ -92,15 +104,16 @@ height: 70px;
 font-size: 45px; 
 border: 5px solid black;
 font-family: minecraft, Helvetica, Arial; 
+border-left: 0px solid black;
 }
 
-#mineShaftAmount, #harvesterAmount {
+#mineShaftAmount, #harvesterAmount, #alienAlchemyAmount {
 background-color: green; 
 width: 574px; 
 height: 70px; 
 font-size: 45px; 
 font-family: minecraft, Helvetica, Arial; 
-border-left: 5px solid black;
+border-left: 0px solid black;
 border-right: 5px solid black;
 }
 
@@ -119,7 +132,8 @@ text-shadow: 2px 2px 0px darkcyan;
 color: cyan;
 width: 225px;
 position: absolute;
-bottom: 70px;
+bottom: 30px;
+height: 25px;
 }
 
 #legomite {
@@ -133,13 +147,6 @@ z-index: -1;
 #button {
 font-family: minecraft, Helvetica, Arial;
 color: green;
-}
-
-#updateResults {
-font-family: minecraft, Helvetica, Arial;
-color: lightblue;
-text-shadow: 0px 0px 5px black;
-font-size: 20px;
 }
 
 #achieve {
@@ -173,7 +180,7 @@ height: 70px;
 #men {
 position: absolute;
 right: 120px;
-bottom: 100px;
+bottom: 70px;
 height: 80px;
 width: 80px;
 }
@@ -196,9 +203,10 @@ font-size: 20px;
 text-shadow: 3px 2.98px 0px #002A00; 
 }
 
-#achieveArchive, #itemsArchive, #pickedArchive {
+#achieveArchive, #itemsArchive, #pickedArchive, #upgradeArchive, #timeArchive {
 font-family: minecraft, Helvetica, Arial;
 color: #AA00AA;
+text-shadow: 2px 2px 0px #2A002A;
 }
 
 #news {
@@ -315,7 +323,7 @@ height: 80px;
 width: 80px;
 position: absolute;
 right: 20px;
-bottom: 100px;
+bottom: 70px;
 }
 
 #upgradeMenu {
@@ -332,11 +340,6 @@ color: #00AA00;
 text-shadow: 5px 5px 5px black;
 border: 2px solid gray;
 z-index: 1;
-}
-
-#upgradeMenu div {
-border: 2.1px solid black;
-margin-bottom: 1.5px;
 }
 
 #upgradeMenu div {
@@ -379,4 +382,116 @@ width: 400px;
 height: 300px;
 margin: 0 auto;
 background-color: gray;
+}
+
+.desc {
+color: #0000AA;
+}
+
+#fancy {
+color: #00AA00;
+}
+
+#stoneEarned {
+position: absolute;
+top: 60px;
+left: 5px;
+display: none;
+}
+
+#autosave {
+font-family: minecraft, Helvetica, Arial;
+}
+
+#savegame {
+display: none;
+font-family: minecraft, Helvetica, Arial;
+color: #00AA00;
+}
+
+/*EVENT STYLES!*/
+#alieninvasionmessage {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: #001021;
+z-index: 100;
+opacity: 1;
+color: red;
+display: none;
+font-size: 40px;
+}
+
+#noUpgrades {
+font-size: 15px;
+}
+
+#prompt {
+display: none;
+position: absolute;
+left: 25%;
+top: 25%;
+width: 50%;
+height: 50%;
+background-color: #4A4A4A;
+color: white;
+font-size: 120%;
+z-index: 500;
+border: 4px solid black;
+}
+
+#tint {
+display: none;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: black;
+opacity: 0.5;
+z-index: 499;
+}
+
+.mcButton {
+text-align: center;
+height: 40px;
+background-color: darkgray;
+border: 2px solid black;
+color: black;
+}
+
+.center {
+text-align: center;
+}
+
+.pluginItem {
+border-bottom: 2px solid black;
+font-size: 20px;
+}
+
+.pluginItem img {
+width: 60px;
+height: 60px;
+}
+
+#pageTwo {
+display: none;
+}
+
+#moreStoreItems {
+position: absolute;
+top: 300px;
+display: none;
+}
+
+#devMenu {
+color: white;
+background-color: black;
+border: 2px solid #4a4a4a;
+}
+
+#showDevMenu {
+display: none;
 }
